fixed freeshipping bar in cart due to using the include rather then the render object

--- a/snippets/cart-items.liquid
+++ b/snippets/cart-items.liquid
@@ -74,7 +74,7 @@
               {% endfor %}
             </tbody>
           </table>
-          {% include 'free-shipping' %}
+          {% render 'free-shipping' %}
           <div class="row cart__row">
             {% if section.settings.cart_notes_enable %}
             <div class="col-md-6">
