--- a/sections/main-wishlist.liquid
+++ b/sections/main-wishlist.liquid
@@ -1,3 +1,20 @@
+<style>
+  .cart-total-bar {
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically if needed */
+    padding: 2px 0px;
+    margin-top: 1.5rem;
+    background: #ffe6e9; 
+  }
+  .cart-total-bar div {
+    font-size: 1rem;
+    font-weight: 00;
+  }
+  p#discount-message {
+    margin-bottom: 0px;
+  }
+</style>
 <div class="container container--wishlist">
   <div class="content-block left-cart-wishlist-section">
     <div class="js-cart-header-total">
@@ -7,20 +24,33 @@
         <p class="js-cart-total"></p>
       </div>
     </div>
-    <div class="tab">
-      <button class="tablinks" onclick="openCity(event, 'main-wishlist-bag')" id="defaultOpen">Shopping Bag</button>
-      <button class="tablinks" onclick="openCity(event, 'main-wishlist-favorites')">My Favorites</button>
-    </div>
-    
-    <div id="main-wishlist-bag" class="tabcontent">
-      {% render 'cart-items' %}
-    </div>
-    
-    <div id="main-wishlist-favorites" class="tabcontent">
-      <div class="cart-wishlist">
-        <div class="row js-wishlist-content">
+    <div>
+      <div class="tab">
+        <button class="tablinks" onclick="openCity(event, 'main-wishlist-bag')" id="defaultOpen">Shopping Bag</button>
+        <button class="tablinks" onclick="openCity(event, 'main-wishlist-favorites')">My Favorites</button>
+      </div>
+      {% if cart.item_count > 0 %}
+      <div class="cart-total-bar" >
+        <div><b> SHIPPING TO AN ADDRESS ({{ cart.item_count | t }})</b></div>
+      </div>
+      {% endif %}
+      <div id="main-wishlist-bag" class="tabcontent">
+        {% render 'cart-items' %}
+      </div>
+      
+      <div id="main-wishlist-favorites" class="tabcontent">
+        <div class="cart-wishlist">
+          <div class="row js-wishlist-content">
+          </div>
         </div>
       </div>
+    </div>
+    <div>
+      {% for block in section.blocks %}
+        {% if block.type == 'related-products-featured' %}
+          {%- include 'related-products-featured' -%}
+        {% endif %}
+      {% endfor %}
     </div>
   </div>
   {% comment %} right cart section - contains checkout box ect {% endcomment %}
@@ -33,8 +63,8 @@
         <button type="submit" name="apply" id="apply-discount-btn" class="btn btn--full btn-theme discount-submit-btn" >
           Submit
         </button>
-        <p id="discount-message"></p>
       </div>
+      <p id="discount-message"></p>
       <div id="applied-discounts">
       </div>
     </div>
@@ -203,6 +233,68 @@
   "name": "Cart Wishlist",
   "settings": [
 
+  ],
+  "blocks": [
+      {
+        "type": "related-products-featured",
+        "name": "Related Product",
+        "limit": 1,
+        "settings": [
+          {
+            "type": "select",
+            "id": "setwidthcontent",
+            "label": "Width Content",
+            "default":"container",
+            "options": [
+            {
+            "value": "container",
+            "label": "Container"
+            },
+            {
+            "value": "container-fluid",
+            "label": "Container Fluid"
+            },
+            {
+              "value": "",
+              "label": "Full No Padding"
+              }
+            ]
+          },
+          {
+            "type": "text",
+            "id": "relate_products_title",
+            "label": "Title",
+            "default": "Related product"
+          },
+          {
+            "type": "range",
+            "id": "show",
+            "min": 1,
+            "max": 5,
+            "step": 1,
+            "label": "Show",
+            "default": 4
+          },
+          {
+            "type": "checkbox",
+            "id": "arrows",
+            "label": "Arrows",
+            "default": false
+          },
+          {
+            "type": "checkbox",
+            "id": "draggable",
+            "label": "Draggable",
+            "default": true
+          },
+          {
+            "type": "checkbox",
+            "id": "dots",
+            "label": "Dots",
+            "default": true
+          }
+        ]
+      }
   ]
 }
 {% endschema %}
