Added move to wishlist in the cart

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -2349,7 +2349,7 @@ th, td {
 	.td-subtotal {
 		display: none;
 	}
-	.td-product-description {
+	.td-product-description-container {
 		flex-basis: 85%;
 	}
 }
@@ -2361,7 +2361,7 @@ th, td {
 	.cart__item-total-mobile {
 		visibility: collapse;
 	}	
-	.td-product-description {
+	.td-product-description-container {
 		flex-basis: 70%;
 	}
 	.td-subtotal {
@@ -4827,13 +4827,13 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 	font-size: 14px;
 }
 
-.product-form .gr-btnjs .js-btn-compare, .product-form .gr-btnjs .js-btn-wishlist {
+.product-form .gr-btnjs .js-btn-compare, .product-form .gr-btnjs .js-btn-wishlist, .ci-wishlist-btn, #ci-edit-btn {
 	cursor: pointer;
 	padding: 0;
 	min-height: inherit;
 	text-transform: uppercase;
 	font-weight: 600;
-	font-size: calc(var(--g-font-size) - 2px);
+	font-size: calc(var(--g-font-size) - 1px);
 	color: var(--g-color-heading);
 	padding-bottom: 18px;
 }
@@ -4842,7 +4842,7 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 	width: 100%;
 }
 
-.product-form .gr-btnjs .js-btn-compare, .product-form .gr-btnjs .js-btn-wishlist{
+.product-form .gr-btnjs .js-btn-compare, .product-form .gr-btnjs .js-btn-wishlist, .ci-wishlist-btn {
 	display: flex;
 	align-items: center;
 }
@@ -4858,11 +4858,18 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 	margin-right: 8px;
 }
 
-.product-form .gr-btnjs .js-btn-compare span, .product-form .gr-btnjs .js-btn-wishlist span {
+ .ci-wishlist-btn svg, #ci-edit-btn i.icon-pencil::before {
+	width: 13px;
+	height: 13px;
+	font-size: 13px;
+	margin-right: 8px;
+}
+
+.product-form .gr-btnjs .js-btn-compare span, .product-form .gr-btnjs .js-btn-wishlist span, .ci-wishlist-btn span {
 	margin-left: 0;
 }
 
-.product-form .gr-btnjs .js-btn-compare:hover, .product-form .gr-btnjs .js-btn-wishlist:hover {
+.product-form .gr-btnjs .js-btn-compare:hover, .product-form .gr-btnjs .js-btn-wishlist:hover, .ci-wishlist-btn:hover, #ci-edit-btn:hover {
 	color: var(--g-main-2);
 }
 
