--- a/snippets/header-js.liquid
+++ b/snippets/header-js.liquid
@@ -34,6 +34,7 @@
     wishlistIconAdded: {{ iconWishlistAdded | json }},
     wishlistText: {{ 'products.product.add_to_wishlist' | t | json }},
     wishlistTextAdded: {{ 'products.product.view_wishlist' | t | json  }},
+    wishlistTextCart: {{ "Move to Wishlist" | json }},
     wishlistRemove: {{ iconRemove | json }},
     compareNoResult: {{ 'products.product.compare_no_result' | t | json }},
     compareIcon: {{ iconCompare | json }},
