--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -70,6 +70,6 @@
     {%- if settings.show_multiple_currencies -%}
     {{ "/services/javascripts/currencies.js" | stylesheet_tag }}
     {%- endif -%}
-    {{ '//cdn.shopify.com/s/files/1/0194/1736/6592/t/1/assets/booster-page-speed-optimizer.js?23' | stylesheet_tag }}
+    {% comment %} {{ '//cdn.shopify.com/s/files/1/0194/1736/6592/t/1/assets/booster-page-speed-optimizer.js?23' | stylesheet_tag }} {% endcomment %}
   </body>
 </html>
