--- a/sections/header-4.liquid
+++ b/sections/header-4.liquid
@@ -905,7 +905,7 @@ input[type=search]::-webkit-search-cancel-button {
   color: var(--g-main);
 }
 
-.js-cart-total, .js-cart-subtotal, .js-cart-discount, .js-cart-tax{
+.js-cart-total, .right-cart-subtotal {
   font-weight: 700;
 }
 
