--- a/snippets/font-icon.liquid
+++ b/snippets/font-icon.liquid
@@ -1,38 +1,301 @@
 <style>
-  @font-face {font-family: 'icomoon';src:  url('{{'icomoon.eot' | asset_url}}');src:  url('{{'icomoon.eot' | asset_url}}') format('embedded-opentype'),url('{{'icomoon.ttf' | asset_url}}') format('truetype'),url('{{'icomoon.woff' | asset_url}}') format('woff'),url('{{'icomoon.svg' | asset_url}}') format('svg');font-weight: normal;font-style: normal;font-display: block;}
-  [class*=" icon-"],[class^=icon-]{font-family:icomoon!important;speak:none;font-style:normal;font-weight:400;font-variant:normal;text-transform:none;line-height:1;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.icon-facebook:before{content:"\e91f"}.icon-gear:before{content:"\e920"}.icon-gear-alt:before{content:"\e921"}.icon-globe-europe:before{content:"\e922"}.icon-hamburger:before{content:"\e923"}.icon-heart:before{content:"\e924"}.icon-heart-solid:before{content:"\e925"}.icon-home:before{content:"\e926"}.icon-idea:before{content:"\e927"}.icon-idea-2:before{content:"\e928"}.icon-instagram:before{content:"\e929"}.icon-linkedin-in:before{content:"\e92a"}.icon-lock:before{content:"\e92b"}.icon-mail:before{content:"\e92c"}.icon-minus:before{content:"\e92d"}.icon-mobile-phone:before{content:"\e92e"}.icon-more-alt:before{content:"\e92f"}.icon-notebook:before{content:"\e930"}.icon-package:before{content:"\e931"}.icon-pause:before{content:"\e932";color:#424a60}.icon-pencil-ruler:before{content:"\e933"}.icon-phone:before{content:"\e934"}.icon-phone-alt:before{content:"\e935"}.icon-pictue:before{content:"\e936"}.icon-picture-alt:before{content:"\e937"}.icon-pin:before{content:"\e938"}.icon-pin-2:before{content:"\e939"}.icon-pinterest:before{content:"\e93a"}.icon-placeholder:before{content:"\e93b"}.icon-play:before{content:"\e93c"}.icon-plus:before{content:"\e93d"}.icon-quickview:before{content:"\e93e"}.icon-quote:before{content:"\e93f"}.icon-remove:before{content:"\e940"}.icon-route:before{content:"\e941"}.icon-search:before{content:"\e942"}.icon-send:before{content:"\e943"}.icon-sign-out:before{content:"\e944"}.icon-sliders:before{content:"\e945"}.icon-snapchat:before{content:"\e946"}.icon-speaker:before{content:"\e947"}.icon-star:before{content:"\e948"}.icon-star-alt:before{content:"\e949"}.icon-trophy:before{content:"\e94a"}.icon-trophy-2:before{content:"\e94b"}.icon-tumblr:before{content:"\e94c"}.icon-twitter:before{content:"\e94d"}.icon-typography:before{content:"\e94e"}.icon-user:before{content:"\e94f"}.icon-view:before{content:"\e950"}.icon-vimeo:before{content:"\e951"}.icon-youtube:before{content:"\e952"}.icon-truck:before{content:"\e91e"}.icon-app:before{content:"\e900"}.icon-app-alt:before{content:"\e901"}.icon-arrow-down:before{content:"\e902"}.icon-arrow-left:before{content:"\e903"}.icon-arrow-right:before{content:"\e904"}.icon-arrow-thin-down:before{content:"\e905"}.icon-arrow-thin-left:before{content:"\e906"}.icon-arrow-thin-right:before{content:"\e907"}.icon-arrow-thin-up:before{content:"\e908"}.icon-arrow-up:before{content:"\e909"}.icon-bag:before{content:"\e90a"}.icon-cart:before{content:"\e90b"}.icon-check-circle:before{content:"\e90c"}.icon-checkout:before{content:"\e90d"}.icon-check-square:before{content:"\e90e"}.icon-chevron-down:before{content:"\e90f"}.icon-chevron-left:before{content:"\e910"}.icon-chevron-right:before{content:"\e911"}.icon-chevron-up:before{content:"\e912"}.icon-circle:before{content:"\e913"}.icon-close:before{content:"\e914"}.icon-coffee:before{content:"\e915"}.icon-compare:before{content:"\e916"}.icon-contract:before{content:"\e917"}.icon-copy:before{content:"\e918"}.icon-divide:before{content:"\e919"}.icon-dot-circle:before{content:"\e91a"}.icon-download:before{content:"\e91b"}.icon-envelope:before{content:"\e91c"}.icon-square:before{content:"\e91d"}
-
-  @font-face {
-    font-family: 'icomoon';
-    src:  url('{{'icomoon_new.eot' | asset_url}}');
-    src:  url('{{'icomoon_new.eot' | asset_url}}') format('embedded-opentype'),
-    url('{{'icomoon_new.ttf' | asset_url}}') format('truetype'),
-    url('{{'icomoon_new.woff' | asset_url}}') format('woff'),
-    url('{{'icomoon_new.svg' | asset_url}}') format('svg');
+  @font-face {font-family: 'icomoon';
+    src:  url('{{'icomoon.eot' | asset_url}}');
+    src:  url('{{'icomoon.eot' | asset_url}}') format('embedded-opentype'),url('{{'icomoon.ttf' | asset_url}}') format('truetype'),url('{{'icomoon.woff' | asset_url}}') format('woff'),url('{{'icomoon.svg' | asset_url}}') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: block;
   }
-  
-  [class^="icon-"], [class*=" icon-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'icomoon' !important;
-    speak: never;
-    font-style: normal;
-    font-weight: 400;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-  
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  [class*=" icon-"],[class^=icon-]{font-family:icomoon!important;
+  speak:none;
+  font-style:normal;
+  font-weight:400;
+  font-variant:normal;
+  text-transform:none;
+  line-height:1;
+  -webkit-font-smoothing:antialiased;
+  -moz-osx-font-smoothing:grayscale}
+
+  .icon-chat:before {
+    content: "\e956";
   }
-  
-  .icon-tiktok:before {
-    content: "\e901";
+  .icon-pencil:before {
+    content: "\e955";
+  }
+  .icon-write:before {
+    content: "\e955";
+  }
+  .icon-blog:before {
+    content: "\e955";
+  }
+  .icon-save:before {
+    content: "\e955";
+  }
+  .icon-note:before {
+    content: "\e955";
   }
   .icon-x:before {
     content: "\e900";
+  }
+  .icon-tiktok:before {
+    content: "\e901";
+  }
+  .icon-facebook:before {
+    content: "\ea90";
+  }
+  .icon-instagram:before {
+    content: "\ea92";
+  }
+  .icon-youtube:before {
+    content: "\ea9d";
+  }
+  .icon-app:before {
+    content: "\e902";
+  }
+  .icon-app-alt:before {
+    content: "\e903";
+  }
+  .icon-arrow-down:before {
+    content: "\e904";
+  }
+  .icon-arrow-left:before {
+    content: "\e905";
+  }
+  .icon-arrow-right:before {
+    content: "\e906";
+  }
+  .icon-arrow-thin-down:before {
+    content: "\e907";
+  }
+  .icon-arrow-thin-left:before {
+    content: "\e908";
+  }
+  .icon-arrow-thin-right:before {
+    content: "\e909";
+  }
+  .icon-arrow-thin-up:before {
+    content: "\e90a";
+  }
+  .icon-arrow-up:before {
+    content: "\e90b";
+  }
+  .icon-bag:before {
+    content: "\e90c";
+  }
+  .icon-cart:before {
+    content: "\e90d";
+  }
+  .icon-check-circle:before {
+    content: "\e90e";
+  }
+  .icon-checkout:before {
+    content: "\e90f";
+  }
+  .icon-check-square:before {
+    content: "\e910";
+  }
+  .icon-chevron-down:before {
+    content: "\e911";
+  }
+  .icon-chevron-left:before {
+    content: "\e912";
+  }
+  .icon-chevron-right:before {
+    content: "\e913";
+  }
+  .icon-chevron-up:before {
+    content: "\e914";
+  }
+  .icon-circle:before {
+    content: "\e915";
+  }
+  .icon-close:before {
+    content: "\e916";
+  }
+  .icon-coffee:before {
+    content: "\e917";
+  }
+  .icon-compare:before {
+    content: "\e918";
+  }
+  .icon-contract:before {
+    content: "\e919";
+  }
+  .icon-copy:before {
+    content: "\e91a";
+  }
+  .icon-divide:before {
+    content: "\e91b";
+  }
+  .icon-dot-circle:before {
+    content: "\e91c";
+  }
+  .icon-download:before {
+    content: "\e91d";
+  }
+  .icon-envelope:before {
+    content: "\e91e";
+  }
+  .icon-square:before {
+    content: "\e91f";
+  }
+  .icon-truck:before {
+    content: "\e920";
+  }
+  .icon-facebook1:before {
+    content: "\e921";
+  }
+  .icon-gear:before {
+    content: "\e922";
+  }
+  .icon-gear-alt:before {
+    content: "\e923";
+  }
+  .icon-globe-europe:before {
+    content: "\e924";
+  }
+  .icon-hamburger:before {
+    content: "\e925";
+  }
+  .icon-heart:before {
+    content: "\e926";
+  }
+  .icon-heart-solid:before {
+    content: "\e927";
+  }
+  .icon-home:before {
+    content: "\e928";
+  }
+  .icon-idea:before {
+    content: "\e929";
+  }
+  .icon-idea-2:before {
+    content: "\e92a";
+  }
+  .icon-instagram1:before {
+    content: "\e92b";
+  }
+  .icon-linkedin-in:before {
+    content: "\e92c";
+  }
+  .icon-lock:before {
+    content: "\e92d";
+  }
+  .icon-mail:before {
+    content: "\e92e";
+  }
+  .icon-minus:before {
+    content: "\e92f";
+  }
+  .icon-mobile-phone:before {
+    content: "\e930";
+  }
+  .icon-more-alt:before {
+    content: "\e931";
+  }
+  .icon-notebook:before {
+    content: "\e932";
+  }
+  .icon-package:before {
+    content: "\e933";
+  }
+  .icon-pause:before {
+    content: "\e934";
+  }
+  .icon-pencil-ruler:before {
+    content: "\e935";
+  }
+  .icon-phone:before {
+    content: "\e936";
+  }
+  .icon-phone-alt:before {
+    content: "\e937";
+  }
+  .icon-pictue:before {
+    content: "\e938";
+  }
+  .icon-picture-alt:before {
+    content: "\e939";
+  }
+  .icon-pin:before {
+    content: "\e93a";
+  }
+  .icon-pin-2:before {
+    content: "\e93b";
+  }
+  .icon-pinterest:before {
+    content: "\e93c";
+  }
+  .icon-placeholder:before {
+    content: "\e93d";
+  }
+  .icon-play:before {
+    content: "\e93e";
+  }
+  .icon-plus:before {
+    content: "\e93f";
+  }
+  .icon-quickview:before {
+    content: "\e940";
+  }
+  .icon-quote:before {
+    content: "\e941";
+  }
+  .icon-remove:before {
+    content: "\e942";
+  }
+  .icon-route:before {
+    content: "\e943";
+  }
+  .icon-search:before {
+    content: "\e944";
+  }
+  .icon-send:before {
+    content: "\e945";
+  }
+  .icon-sign-out:before {
+    content: "\e946";
+  }
+  .icon-sliders:before {
+    content: "\e947";
+  }
+  .icon-snapchat:before {
+    content: "\e948";
+  }
+  .icon-speaker:before {
+    content: "\e949";
+  }
+  .icon-star:before {
+    content: "\e94a";
+  }
+  .icon-star-alt:before {
+    content: "\e94b";
+  }
+  .icon-trophy:before {
+    content: "\e94c";
+  }
+  .icon-trophy-2:before {
+    content: "\e94d";
+  }
+  .icon-tumblr:before {
+    content: "\e94e";
+  }
+  .icon-twitter:before {
+    content: "\e94f";
+  }
+  .icon-typography:before {
+    content: "\e950";
+  }
+  .icon-user:before {
+    content: "\e951";
+  }
+  .icon-view:before {
+    content: "\e952";
+  }
+  .icon-vimeo:before {
+    content: "\e953";
+  }
+  .icon-youtube1:before {
+    content: "\e954";
   }
 </style>
