--- a/snippets/header-css.liquid
+++ b/snippets/header-css.liquid
@@ -49,7 +49,7 @@ article,aside,figcaption,figure,footer,header,hgroup,main,nav,section{display:bl
 {%- if template contains 'collection' and settings.price_range_enable -%}
 <link href="{{ 'jquery-ui.min.css' | asset_url }}" rel="stylesheet" type="text/css" media="all" />
 {%- endif -%}
-{%- include 'font-icon' -%}
+{%- render 'font-icon' -%}
 {%- if settings.font_family_custom -%}
   {%- include 'font-custom' -%}
 {%- endif -%}
