Finished adding edit item in cart by using the quickview function and implementing one named quickedit

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -2344,13 +2344,14 @@ th, td {
 	}
 	.cart__item-total-mobile {
 		visibility: visible;
+		font-size: .8rem;
 	}
 
 	.td-subtotal {
 		display: none;
 	}
 	.td-product-description-container {
-		flex-basis: 85%;
+		flex-basis: 80%;
 	}
 }
 
@@ -4321,11 +4322,11 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 }
 
 .slick-prev:before {
-	content: '\e903';
+	content: '\e905';
 }
 
 [dir="rtl"] .slick-prev:before {
-	content: '\e904';
+	content: '\e906';
 }
 
 .site-nav .slick-prev {
@@ -4347,11 +4348,11 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 }
 
 .slick-next:before {
-	content: '\e904';
+	content: '\e906';
 }
 
 [dir="rtl"] .slick-next:before {
-	content: '\e903';
+	content: '\e905';
 }
 
 .site-nav .slick-next {
@@ -4827,7 +4828,7 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 	font-size: 14px;
 }
 
-.product-form .gr-btnjs .js-btn-compare, .product-form .gr-btnjs .js-btn-wishlist, .ci-wishlist-btn, #ci-edit-btn {
+.product-form .gr-btnjs .js-btn-compare, .product-form .gr-btnjs .js-btn-wishlist, .ci-wishlist-btn, .js-btn-quickedit {
 	cursor: pointer;
 	padding: 0;
 	min-height: inherit;
@@ -4858,7 +4859,7 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 	margin-right: 8px;
 }
 
- .ci-wishlist-btn svg, #ci-edit-btn i.icon-pencil::before {
+ .ci-wishlist-btn svg, .js-btn-quickedit i.icon-pencil::before {
 	width: 13px;
 	height: 13px;
 	font-size: 13px;
@@ -4869,7 +4870,7 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 	margin-left: 0;
 }
 
-.product-form .gr-btnjs .js-btn-compare:hover, .product-form .gr-btnjs .js-btn-wishlist:hover, .ci-wishlist-btn:hover, #ci-edit-btn:hover {
+.product-form .gr-btnjs .js-btn-compare:hover, .product-form .gr-btnjs .js-btn-wishlist:hover, .ci-wishlist-btn:hover, .js-btn-quickedit:hover {
 	color: var(--g-main-2);
 }
 
@@ -5650,7 +5651,7 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 }
 
 .product-single__thumbnails.slick-initialized .slick-prev:before {
-	content: "\e903";
+	content: "\e905";
 }
 
 .product-single__thumbnails.slick-initialized .slick-next {
@@ -5658,7 +5659,7 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 }
 
 .product-single__thumbnails.slick-initialized .slick-next:before {
-	content: "\e904";
+	content: "\e906";
 }
 
 .product-single__thumbnails.slick-initialized .slick-disabled {
