--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -65,6 +65,7 @@
     {%- include 'notify-popup' -%}
     {%- include 'bottom-contents' -%}
     {%- include 'quickview' -%}
+    {%- include 'quickedit' -%}
     {%- include 'popup-compare' -%}
     {%- include 'header-js' -%}
     {%- if settings.show_multiple_currencies -%}
