fixed a few links in the home screen and fixed the clipping of the screen in small phones

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -1841,6 +1841,11 @@ body, html {
 	}
 }
 
+@media only screen and (max-width: 420px) {
+	.container {
+		padding: 0 10px;
+	}
+}
 .row {
 	margin-right: calc(0px - var(--g-hgutter));
 	margin-left: calc(0px - var(--g-hgutter));
